--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon src/app.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "author": "Saoudi Abderraouf",
     "license": "ISC",
@@ -15,5 +16,8 @@
         "express": "^4.17.1",
         "mongoose": "^5.13.1",
         "nodemon": "^2.0.9"
+    },
+    "engines": {
+        "node": ">=10.0.0"
     }
 }
