port number changed

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-DB_CONNECTION = 'mongodb+srv://foufa:foufa123123@foufatest.jwo76.mongodb.net/foufaTest?retryWrites=true&w=majority'
+DB_CONNECTION = mongodb+srv://foufa:foufa123123@foufatest.jwo76.mongodb.net/foufaTest?retryWrites=true&w=majority
 PORT = 8000
